# bemtool2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install.sh  makefile  prog.cxx  prog2.cxx
cmake-modules/: FindHtool.cmake
doc/: CMakeLists.txt  solution-analytiques.tex
include/bemtool2/: algo.h  calculus.h  dof.h  eigen_wrap.h  elt.h  femP1.h  gmm_wrap.h  gmsh_calls.h  hpddm_calls.h  htool_wrap.h  kernel.h  kernel_dissipative_helmholtz.hpp  kernel_laplace.hpp  kernel_propagative_helmholtz.hpp  mesh.h  misc.h  normal.h  overlap.hpp  quad.h  quad1D.h  quadBEM.h  quadPOT.h  test.cpp  tools.h  triangle_dunavant_rule.hpp  user.h  view.hpp
lib/: algo.h  calculus.h  dof.h  elt.h  femP1.h  gmm_wrap.h  kernel.h  mesh.h  normal.h  quadBEM.h  tools.h
src/: CMakeLists.txt  gmsh_calls.cpp  quad1D.cpp  triangle_dunavant_rule.cpp  triangle_dunavant_rule.hpp
test/: CMakeLists.txt  first_kind_dirichlet_2D.cpp  first_kind_dirichlet_3D.cpp  first_kind_neumann_2D.cpp  fourier_harmonics_2D.cpp  loading_mesh.cpp  plane_wave_harmonics_2D.cpp  processing.cpp  prog.cxx  prog2.cxx  prog3.cxx  second_kind_dirichlet_2D.cpp  second_kind_neumann_2D.cpp  tests_circle_2D.cpp  tests_circle_2D.hpp  tests_quadrature.cpp
test/integration_tests/: CMakeLists.txt
test/integration_tests/tests_eigen/: CMakeLists.txt  processing.cpp
test/integration_tests/tests_gmsh/: CMakeLists.txt  processing.cpp  tests_gmsh.cpp  tests_gmsh.hpp
test/integration_tests/tests_hpddm/: CMakeLists.txt  processing.cpp  tests_hpddm.cpp  tests_hpddm.hpp
test/integration_tests/tests_htool/: CMakeLists.txt  tests_htool.cpp
test/integration_tests/tests_order_dunavant/: CMakeLists.txt  tests_sphere_3D.cpp  tests_sphere_3D.hpp
test/integration_tests/tests_potential/: CMakeLists.txt  processing.cpp  tests_potential.cpp  tests_potential.hpp
test/integration_tests/tests_quadratures/: CMakeLists.txt  processing.cpp  tests_quadratures.cpp  tests_quadratures.hpp
test/tests_circle_2D/: CMakeLists.txt  processing.cpp  tests_circle_2D.cpp  tests_circle_2D.hpp
test/tests_circle_2D/results/: convergence_probs.eps  first_kind_dirichlet_2D.txt  first_kind_neumann_2D.txt  fourier_harmonics_1.txt  fourier_harmonics_2.txt  fourier_harmonics_3.txt  fourier_harmonics_4.txt  fourier_harmonics_5.txt  fourier_harmonics_K.eps  fourier_harmonics_V.eps  fourier_harmonics_W.eps  plane_wave_harmonics_1.txt  plane_wave_harmonics_2.txt  plane_wave_harmonics_3.txt  plane_wave_harmonics_4.txt  plane_wave_harmonics_5.txt  plane_wave_harmonics_K.eps  plane_wave_harmonics_V.eps  plane_wave_harmonics_W.eps  second_kind_dirichlet_2D.txt  second_kind_neumann_2D.txt
test/validation_tests/: CMakeLists.txt
test/validation_tests/tests_circle_2D/: CMakeLists.txt  processing.cpp  tests_circle_2D.cpp  tests_circle_2D.hpp
tests/: CMakeLists.txt  prog.cxx  prog2.cxx  prog3.cxx
tests/functional_tests/: CMakeLists.txt  ListeTest.txt
tests/functional_tests/kernel/: CMakeLists.txt  test_eigenvalues_PH_2D.cpp
tests/functional_tests/tests_eigen/: CMakeLists.txt  tests_eigen.hpp
tests/functional_tests/tests_hpddm/: CMakeLists.txt  tests_hpddm.cpp
tests/functional_tests/tests_htool/: tests_htool_gui.cpp
tests/functional_tests/tests_potential/: CMakeLists.txt  tests_potential.cpp
tests/functional_tests/tests_quadratures/: CMakeLists.txt  tests_circle.cpp  tests_circle_2D.cpp  tests_overlapp_2D.cpp  tests_overlapp_3D.cpp  tests_potential_2D.cpp  tests_potential_3D.cpp  tests_quadratures.cpp
tests/integration_tests/tests_htool/: tests_htool.cpp
tests/integration_tests/tests_order_dunavant/: CMakeLists.txt  processing.cpp
tests/performance_tests/: CMakeLists.txt
tests/performance_tests/kernel_tests/: CMakeLists.txt  tests_DLP_PH_2D.cpp  tests_HSP_PH_2D.cpp  tests_SLP_PH_2D.cpp  tests_TDLP_PH_2D.cpp
tests/performance_tests/tests_circle_2D/: tests_circle_2D.cpp  tests_circle_2D.hpp
tests/validation_tests/tests_circle_2D/: processing.cpp
