#=============================================================================#
#=========================== Libraries =======================================#
#=============================================================================#

# BEMTOOL package
set(bemtool_dir "${CMAKE_CURRENT_SOURCE_DIR}/../../../include")

#=============================================================================#
#=========================== Executables =====================================#
#=============================================================================#

add_executable(Tests_gmsh tests_gmsh.cpp)

target_include_directories(Tests_gmsh PRIVATE 
								${bemtool_dir})
