#=============================================================================#
#=========================== Executables =====================================#
#=============================================================================#

add_executable(Tests_gmsh tests_gmsh.cpp)

target_link_libraries(Tests_gmsh bemtool)
