#=============================================================================#
#=========================== Executables =====================================#
#=============================================================================#
add_executable(Tests_quadratures tests_quadratures.cpp)

target_link_libraries(Tests_quadratures bemtool)
