#=============================================================================#
#=========================== Executables =====================================#
#=============================================================================#
add_executable(Tests_circle_2D processing.cpp
                    tests_circle_2D.cpp)

target_link_libraries(Tests_circle_2D bemtool)