#=============================================================================#
#=========================== Executables =====================================#
#=============================================================================#
# add_executable(Tests_eigen processing.cpp tests_eigen.cpp)
# target_include_directories(Tests_eigen PRIVATE 
# 								${bemtool_include_dir}
# 								${EIGEN3_INCLUDE_DIR})