#=============================================================================#
#=========================== Executables =====================================#
#=============================================================================#
add_executable(Tests_potential tests_potential.cpp)

target_link_libraries(Tests_potential bemtool)

